--- a/Progect/Jenkinsfile
+++ b/Progect/Jenkinsfile
@@ -1,85 +1,80 @@
-pipeline {
-  agent {
-    kubernetes {
-      // якщо маєш podTemplate "kaniko" у Jenkins — inheritFrom підхопить його;
-      // якщо ні — нижче явно додаємо контейнер kaniko.
-      inheritFrom 'kaniko'
+ pipeline {
+   agent {
+     kubernetes {
+       label 'kaniko'
+       // якщо у Jenkins є podTemplate "kaniko" — підхопить; якщо ні — нижче явно додано контейнер
+       inheritFrom 'kaniko'
+       containerTemplate {
+         name 'kaniko'
+         image 'gcr.io/kaniko-project/executor:debug'
+         command 'cat'
+         ttyEnabled true
+       }
+       defaultContainer 'jnlp'
+       serviceAccount 'jenkins'       // IRSA-роль отримаємо через Terraform (див. п.1.3)
+       slaveConnectTimeout 180
+     }
+   }
 
-      containerTemplate {
-        name 'kaniko'
-        image 'gcr.io/kaniko-project/executor:debug'  // <-- debug замість latest
-        command 'cat'                                 // тепер є в busybox
-        ttyEnabled true
-      }
+   environment {
+     AWS_REGION    = 'us-east-1'
+     ECR_URI       = '785434010839.dkr.ecr.us-east-1.amazonaws.com/lesson-7-ecr'
+     APP_NAME      = 'django-app'
+     GITOPS_BRANCH = 'lesson-8-9'
+     VALUES_FILE   = 'Progect/charts/django-app/values.yaml'
+     GIT_SSH_URL   = 'git@github.com:DanSport/DevOps.git'
+   }
 
-      defaultContainer 'jnlp'
-      serviceAccount 'default'
-    }
-  }
+   stages {
+     stage('Checkout') {
+       steps {
+         checkout scm
+         sh 'git rev-parse --short HEAD && git status'
+       }
+     }
 
-  environment {
-    AWS_REGION    = 'us-east-1'
-    ECR_URI       = '785434010839.dkr.ecr.us-east-1.amazonaws.com/lesson-7-ecr'
-    APP_NAME      = 'django-app'
-    GITOPS_BRANCH = 'lesson-8-9'
-    VALUES_FILE   = 'Progect/charts/django-app/values.yaml'
-    GIT_SSH_URL   = 'git@github.com:DanSport/DevOps.git'
-  }
+     stage('Build & Push (Kaniko)') {
+       steps {
+         container('kaniko') {
+           sh '''
+             set -euxo pipefail
+             TAG="build-${BUILD_NUMBER}"
+             /kaniko/executor \
+               --context="$WORKSPACE" \
+               --dockerfile=Dockerfile \
+               --destination="${ECR_URI}:${TAG}" \
+               --destination="${ECR_URI}:latest" \
+               --cache=true --snapshotMode=redo
+             echo "${TAG}" > .image_tag
+           '''
+         }
+       }
+     }
 
-  stages {
-    stage('Checkout') {
-      steps {
-        checkout scm
-        sh 'git rev-parse --short HEAD && git status'
-      }
-    }
+     stage('Bump Helm values & Push') {
+       steps {
+         sshagent (credentials: ['gitops-ssh']) {
+           sh '''
+             set -euxo pipefail
+             TAG="$(cat .image_tag)"
+             git remote set-url origin "${GIT_SSH_URL}"
+             git fetch origin "${GITOPS_BRANCH}"
+             git checkout "${GITOPS_BRANCH}"
+             # оновлюємо image.tag у values.yaml
+             sed -i.bak -E "s#^(\\s*tag:\\s*).*#\\1${TAG}#g" "${VALUES_FILE}" && rm -f "${VALUES_FILE}.bak"
+             git config user.email "ci@local"
+             git config user.name  "jenkins-ci"
+             git add "${VALUES_FILE}" || true
+             git commit -m "ci: bump ${APP_NAME} image tag to ${TAG} [skip ci]" || echo "No changes to commit"
+             git push origin "${GITOPS_BRANCH}"
+           '''
+         }
+       }
+     }
+   }
 
-    stage('Build & Push (Kaniko)') {
-      steps {
-        container('kaniko') {
-          sh '''
-            set -euxo pipefail
-            TAG="build-${BUILD_NUMBER}"
-            /kaniko/executor \
-              --context="$WORKSPACE" \
-              --dockerfile=Dockerfile \
-              --destination="${ECR_URI}:${TAG}" \
-              --destination="${ECR_URI}:latest" \
-              --cache=true --snapshotMode=redo
-            echo "${TAG}" > .image_tag
-          '''
-        }
-      }
-    }
-
-    stage('Bump Helm values & Push') {
-      steps {
-        sshagent (credentials: ['gitops-ssh']) {
-          sh '''
-            set -euxo pipefail
-            TAG="$(cat .image_tag)"
-            git remote set-url origin "${GIT_SSH_URL}"
-            git fetch origin "${GITOPS_BRANCH}"
-            git checkout "${GITOPS_BRANCH}"
-            if command -v yq >/dev/null 2>&1; then
-              yq -i '.image.tag = env(TAG)' "${VALUES_FILE}"
-            else
-              sed -i.bak -E "s#^(\\s*tag:\\s*).*#\\1${TAG}#g" "${VALUES_FILE}"
-              rm -f "${VALUES_FILE}.bak"
-            fi
-            git config user.email "ci@local"
-            git config user.name  "jenkins-ci"
-            git add "${VALUES_FILE}" || true
-            git commit -m "ci: bump ${APP_NAME} image tag to ${TAG} [skip ci]" || echo "No changes to commit"
-            git push origin "${GITOPS_BRANCH}"
-          '''
-        }
-      }
-    }
-  }
-
-  post {
-    success { echo '✅ Образ у ECR, values.yaml оновлено — Argo CD підхопить зміни.' }
-    failure { echo '❌ Пайплайн впав — глянь лог стадії вище.' }
-  }
-}
+   post {
+     success { echo '✅ Image pushed, values.yaml оновлено. Argo CD підхопить зміни.' }
+     failure { echo '❌ Перевір логи стадії вище.' }
+   }
+ }
