--- a/Progect/Jenkinsfile
+++ b/Progect/Jenkinsfile
@@ -11,7 +11,7 @@
          ttyEnabled true
        }
        defaultContainer 'jnlp'
-       serviceAccount 'jenkins'       // IRSA-роль отримаємо через Terraform (див. п.1.3)
+       serviceAccount 'jenkins-sa'       // IRSA-роль отримаємо через Terraform 
        slaveConnectTimeout 180
      }
    }
@@ -20,7 +20,7 @@
      AWS_REGION    = 'us-east-1'
      ECR_URI       = '785434010839.dkr.ecr.us-east-1.amazonaws.com/lesson-7-ecr'
      APP_NAME      = 'django-app'
-     GITOPS_BRANCH = 'lesson-8-9'
+     GITOPS_BRANCH = 'main'
      VALUES_FILE   = 'Progect/charts/django-app/values.yaml'
      GIT_SSH_URL   = 'git@github.com:DanSport/DevOps.git'
    }
