--- a/Progect/Jenkinsfile
+++ b/Progect/Jenkinsfile
@@ -1,7 +1,6 @@
 pipeline {
   agent {
     kubernetes {
-      // Описуємо pod з двома контейнерами: git-tools і kaniko
       yaml """
 apiVersion: v1
 kind: Pod
@@ -15,12 +14,16 @@ spec:
       emptyDir: {}
   containers:
     - name: git-tools
-      image: bitnami/git:2.45.2
+      image: public.ecr.aws/bitnami/git:2.45.2
       command: ["cat"]
       tty: true
       volumeMounts:
         - name: workspace-volume
           mountPath: /home/jenkins/agent
+      resources:
+        requests: { cpu: "50m",  memory: "64Mi" }
+        limits:   { cpu: "500m", memory: "256Mi" }
+
     - name: kaniko
       image: gcr.io/kaniko-project/executor:debug
       command: ["cat"]
@@ -28,8 +31,25 @@ spec:
       volumeMounts:
         - name: workspace-volume
           mountPath: /home/jenkins/agent
+      resources:
+        requests: { cpu: "100m", memory: "128Mi" }
+        limits:   { cpu: "1",    memory: "1Gi" }
+
+    # ЯВНО визначаємо jnlp і задаємо тунель на сервіс agent’ів
+    - name: jnlp
+      image: jenkins/inbound-agent:3327.v868139a_d00e0-6
+      args: ['\$(JENKINS_SECRET)', '\$(JENKINS_NAME)']
+      env:
+        - name: JENKINS_URL
+          value: "http://jenkins.jenkins.svc.cluster.local:80/"
+        - name: JENKINS_TUNNEL
+          value: "jenkins-agent.jenkins.svc.cluster.local:50000"
+      resources:
+        requests: { cpu: "100m", memory: "256Mi" }
+      volumeMounts:
+        - name: workspace-volume
+          mountPath: /home/jenkins/agent
 """
-      // Усі shell-кроки за замовчуванням підуть у git-tools (там є git, sed, ssh)
       defaultContainer 'git-tools'
     }
   }
@@ -38,19 +58,15 @@ spec:
     AWS_REGION    = 'us-east-1'
     ECR_URI       = '785434010839.dkr.ecr.us-east-1.amazonaws.com/lesson-7-ecr'
     APP_NAME      = 'django-app'
-    GITOPS_BRANCH = 'main'   // пушимо в main
+    GITOPS_BRANCH = 'main'
     VALUES_FILE   = 'Progect/charts/django-app/values.yaml'
     GIT_SSH_URL   = 'git@github.com:DanSport/DevOps.git'
   }
 
   stages {
-
     stage('Checkout') {
       steps {
-        // Стандартний checkout (Multibranch підставить потрібну гілку)
         checkout scm
-
-        // Інформативно: тепер git є → команда відпрацює
         sh '''
           set -euxo pipefail
           git --version
@@ -83,28 +99,23 @@ spec:
           sshagent (credentials: ['gitops-ssh']) {
             sh '''
               set -euxo pipefail
-
-              # Додаємо github.com у known_hosts (щоб уникнути Host key verification failed)
-              mkdir -p ~/.ssh
-              chmod 700 ~/.ssh
+              mkdir -p ~/.ssh && chmod 700 ~/.ssh
               ssh-keyscan -t ed25519 github.com >> ~/.ssh/known_hosts
               chmod 644 ~/.ssh/known_hosts
 
               TAG="$(cat .image_tag)"
 
-              # Переходимо на гілку, куди пушимо (main), оновлюємо tag у values.yaml
               git remote set-url origin "${GIT_SSH_URL}"
-              git fetch origin main
-              git checkout main
+              git fetch origin "${GITOPS_BRANCH}"
+              git checkout "${GITOPS_BRANCH}"
 
-              # Оновлюємо image.tag у values.yaml (GNU sed у цьому контейнері є)
               sed -i.bak -E "s#^(\\s*tag:\\s*).*#\\1${TAG}#g" "${VALUES_FILE}" && rm -f "${VALUES_FILE}.bak"
 
               git config user.email "ci@local"
               git config user.name  "jenkins-ci"
               git add "${VALUES_FILE}" || true
               git commit -m "ci: bump ${APP_NAME} image tag to ${TAG} [skip ci]" || echo "No changes to commit"
-              git push origin main
+              git push origin "${GITOPS_BRANCH}"
             '''
           }
         }
@@ -113,7 +124,7 @@ spec:
   }
 
   post {
-    success { echo '✅ Image pushed у ECR та values.yaml оновлено. Змерджи main → lesson-8-9, і Argo CD підхопить зміни.' }
-    failure { echo '❌ Перевір логи: найчастіше це git/SSH/known_hosts або помилка Kaniko.' }
+    success { echo '✅ Образ у ECR і values.yaml оновлено. Змерджи main → lesson-8-9, щоб Argo CD підхопив.' }
+    failure { echo '❌ Перевір логи: здебільшого це тунель/SSH або Kaniko.' }
   }
 }
