--- a/Progect/charts/django-app/templates/deployment.yaml
+++ b/Progect/charts/django-app/templates/deployment.yaml
@@ -6,6 +6,20 @@ metadata:
     {{- include "django-app.labels" . | nindent 4 }}
 spec:
   replicas: {{ .Values.replicaCount | default 2 }}
+  {{- /* БЕЗПЕЧНИЙ strategy: якщо .Values.strategy порожній — підставляємо дефолти */}}
+  {{- if .Values.strategy }}
+  strategy:
+    type: {{ .Values.strategy.type | default "RollingUpdate" }}
+    rollingUpdate:
+      maxUnavailable: {{ .Values.strategy.maxUnavailable | default 0 }}
+      maxSurge: {{ .Values.strategy.maxSurge | default 1 }}
+  {{- else }}
+  strategy:
+    type: RollingUpdate
+    rollingUpdate:
+      maxUnavailable: 0
+      maxSurge: 1
+  {{- end }}
   selector:
     matchLabels:
       app: {{ include "django-app.name" . }}
@@ -16,36 +30,53 @@ spec:
         {{- include "django-app.labels" . | nindent 8 }}
     spec:
       initContainers:
-      - name: wait-for-db
-        image: postgres:15
-        imagePullPolicy: IfNotPresent
-        envFrom:
-          - configMapRef:
-             name: {{ .Release.Name }}-django-app-config
-        command:
-           - /bin/sh
-           - -lc
-           - |
-             until pg_isready -h "${POSTGRES_HOST:-db}" -p "${POSTGRES_PORT:-5432}" -U "${POSTGRES_USER:-appuser}"; do
-             echo "waiting for db"
-             sleep 2
-             done
+        - name: wait-for-db
+          image: postgres:15
+          imagePullPolicy: IfNotPresent
+          {{- /* envFrom рендеримо ТІЛЬКИ якщо є configMapName/secretName */}}
+          {{- if or .Values.envFrom.configMapName .Values.envFrom.secretName }}
+          envFrom:
+            {{- if .Values.envFrom.configMapName }}
+            - configMapRef:
+                name: {{ .Values.envFrom.configMapName }}
+            {{- end }}
+            {{- if .Values.envFrom.secretName }}
+            - secretRef:
+                name: {{ .Values.envFrom.secretName }}
+            {{- end }}
+          {{- end }}
+          command:
+            - /bin/sh
+            - -lc
+            - |
+              until pg_isready -h "${POSTGRES_HOST:-db}" -p "${POSTGRES_PORT:-5432}" -U "${POSTGRES_USER:-appuser}"; do
+                echo "waiting for db"
+                sleep 2
+              done
 
-      - name: migrate
-        image: "{{ .Values.image.repository }}:{{ .Values.image.tag }}"
-        imagePullPolicy: {{ .Values.image.pullPolicy | default "Always" }}
-        workingDir: /app/django_app
-        envFrom:
-          - configMapRef:
-            name: {{ .Release.Name }}-django-app-config
-        env:
-          - name: DB_PASSWORD
-            valueFrom:
-            secretKeyRef:
-            name: django-db-secret
-            key: POSTGRES_PASSWORD
-    # 👇 Викликаємо саме venv-інтерпретатор
-        command: ["/venv/bin/python","manage.py","migrate","--noinput"]
+        - name: migrate
+          image: "{{ .Values.image.repository }}:{{ .Values.image.tag }}"
+          imagePullPolicy: {{ .Values.image.pullPolicy | default "Always" }}
+          workingDir: /app/django_app
+          {{- if or .Values.envFrom.configMapName .Values.envFrom.secretName }}
+          envFrom:
+            {{- if .Values.envFrom.configMapName }}
+            - configMapRef:
+                name: {{ .Values.envFrom.configMapName }}
+            {{- end }}
+            {{- if .Values.envFrom.secretName }}
+            - secretRef:
+                name: {{ .Values.envFrom.secretName }}
+            {{- end }}
+          {{- end }}
+          env:
+            - name: DB_PASSWORD
+              valueFrom:
+                secretKeyRef:
+                  name: django-db-secret
+                  key: POSTGRES_PASSWORD
+          command: ["/venv/bin/python","manage.py","migrate","--noinput"]
+
       containers:
         - name: {{ include "django-app.name" . }}
           image: "{{ .Values.image.repository }}:{{ .Values.image.tag }}"
@@ -54,9 +85,22 @@ spec:
           ports:
             - containerPort: 8000
           command: ["python","manage.py","runserver","0.0.0.0:8000"]
+          {{- /* для основного контейнера — або конкретний configMap/secret з values, або дефолтний -config */}}
+          {{- if or .Values.envFrom.configMapName .Values.envFrom.secretName }}
+          envFrom:
+            {{- if .Values.envFrom.configMapName }}
+            - configMapRef:
+                name: {{ .Values.envFrom.configMapName }}
+            {{- end }}
+            {{- if .Values.envFrom.secretName }}
+            - secretRef:
+                name: {{ .Values.envFrom.secretName }}
+            {{- end }}
+          {{- else }}
           envFrom:
             - configMapRef:
                 name: {{ include "django-app.fullname" . }}-config
+          {{- end }}
           env:
             - name: DB_PASSWORD
               valueFrom:
@@ -69,13 +113,12 @@ spec:
               port: 8000
             initialDelaySeconds: {{ .Values.health.readinessInitialDelay | default 5 }}
             periodSeconds: {{ .Values.health.readinessPeriod | default 5 }}
-
-            livenessProbe:
-              httpGet:
-                path: {{ .Values.health.path | default "/admin/login/" }}
-                port: 8000
-              initialDelaySeconds: {{ .Values.health.livenessInitialDelay | default 20 }}
-              periodSeconds: {{ .Values.health.livenessPeriod | default 10 }}
+          livenessProbe:
+            httpGet:
+              path: {{ .Values.health.path | default "/admin/login/" }}
+              port: 8000
+            initialDelaySeconds: {{ .Values.health.livenessInitialDelay | default 20 }}
+            periodSeconds: {{ .Values.health.livenessPeriod | default 10 }}
           resources:
             {{- toYaml (.Values.resources | default dict) | nindent 12 }}
-
+            
