--- a/Progect/charts/django-app/values.yaml
+++ b/Progect/charts/django-app/values.yaml
@@ -41,3 +41,9 @@ health:
   livenessInitialDelay: 20
   livenessPeriod: 10
 
+envFrom: {} 
+
+strategy:          
+  type: RollingUpdate
+  maxUnavailable: 0
+  maxSurge: 1
