--- a/Progect/charts/django-app/templates/configmap.yaml
+++ b/Progect/charts/django-app/templates/configmap.yaml
@@ -5,12 +5,6 @@ metadata:
   labels:
     {{- include "django-app.labels" . | nindent 4 }}
 data:
-  DJANGO_ALLOWED_HOSTS: "*"
-
-  # DB envs для settings.py
-  DB_ENGINE: "postgresql"
-  DB_NAME: "appdb"
-  DB_USER: "appuser"
-  DB_PASSWORD: "appsecret"
-  DB_HOST: "db"
-  DB_PORT: "5432"
+  {{- range $k, $v := .Values.env }}
+  {{ $k }}: {{ $v | quote }}
+  {{- end }}
