--- a/Progect/charts/django-app/templates/configmap.yaml
+++ b/Progect/charts/django-app/templates/configmap.yaml
@@ -1,11 +1,14 @@
 apiVersion: v1
 kind: ConfigMap
 metadata:
-  name: {{ .Release.Name }}-django-app-config
+  name: {{ include "django-app.fullname" . }}-config
   labels:
-    app: django-app
-    release: {{ .Release.Name }}
+    {{- include "django-app.labels" . | nindent 4 }}
 data:
+{{- if .Values.env }}
 {{- range $k, $v := .Values.env }}
   {{ $k }}: "{{ $v }}"
+{{- end }}
+{{- else }}
+  DJANGO_ALLOWED_HOSTS: "*"
 {{- end }}
