--- a/Progect/modules/jenkins/values.yaml
+++ b/Progect/modules/jenkins/values.yaml
@@ -7,10 +7,25 @@ controller:
   serviceType: ClusterIP
   servicePort: 80
 
+  resources:
+    requests:
+      cpu: "1000m"
+      memory: "1Gi"
+    limits:
+      cpu: "2"
+      memory: "2Gi"
+
+  podSecurityContext:
+    fsGroup: 1000
+  containerSecurityContext:
+    runAsUser: 1000
+    runAsGroup: 1000
+
   persistence:
     enabled: true
     storageClass: gp3
     size: 10Gi
+
   installPlugins:
     - ansicolor:1.0.4
     - timestamper:1.26
@@ -20,6 +35,33 @@ controller:
     - git-client
     - ssh-credentials
     - workflow-aggregator
+
+  startupProbe:
+    httpGet:
+      path: /login
+      port: http
+    initialDelaySeconds: 60
+    periodSeconds: 10
+    timeoutSeconds: 5
+    failureThreshold: 30   # ~5 хв на старт
+
+  livenessProbe:
+    httpGet:
+      path: /login
+      port: http
+    initialDelaySeconds: 180
+    periodSeconds: 10
+    timeoutSeconds: 5
+    failureThreshold: 5
+
+  readinessProbe:
+    httpGet:
+      path: /login
+      port: http
+    initialDelaySeconds: 120
+    periodSeconds: 10
+    timeoutSeconds: 5
+    failureThreshold: 3
 
   containerEnv:
     - name: GITOPS_SSH_PRIVATE_KEY
@@ -51,18 +93,19 @@ controller:
                 description('CI/CD for Django app: build & push image to ECR, bump Helm values, push to repo')
                 definition {
                   cpsScm {
+                    lightweight(true)
                     scm {
                       git {
-                        remote('git@github.com:DanSport/DevOps.git')
-                        credentials('gitops-ssh')
-                        // якщо хочеш main — зміни нижче на '*/main'
-                        branch('*/lesson-8-9')
+                        remote {
+                          url('git@github.com:DanSport/DevOps.git')
+                          credentials('gitops-ssh')
+                        }
+                        branches('*/lesson-8-9')
                       }
                     }
                     scriptPath('Progect/Jenkinsfile')
                   }
                 }
-                // тригер на SCM кожні 2 хвилини; можеш забрати, якщо не треба
                 triggers { scm('H/2 * * * *') }
               }
 rbac:
